--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <br>by Eero Lehtonen
     </h1>
 
-    <h4>SISUSTUSARKKITEHTI 1
+    <h4>SISUSTUSARKKITEHTI
         <br>INREDNINGSARKITEKT
         <br>INTERIOR ARCHITECT
     </h4>
