--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
 </head>
 
 <body>
-    <h1>Eero
-        <br>by Eero Lehtonen
-    </h1>
 
+    <div>
+        <h1>Eero
+            <br>by Eero Lehtonen
+        </h1>
+
+
+    </div>
     <h4>SISUSTUSARKKITEHTI
         <br>INREDNINGSARKITEKT
         <br>INTERIOR ARCHITECT
     </h4>
-
-    <div class="content" id="second"><img src="img015(1).jpg" alt="XXXX"></div>
+    </div>
+    <div class="flex-container">
+        <div class="content" id="second"><img src="img015(1).jpg" alt="XXXX"></div>
+        <div class="content" id="first"><img src="img023(1).jpg" alt="XXXX"></div>
 </body>
 
 </html>
