--- a/index.html
+++ b/index.html
@@ -7,26 +7,66 @@
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
     <link rel="stylesheet" href="styles.css">
-    <title>Eero by Eero Lehtonen</title>
+    <title>Eero</title>
 </head>
 
 <body>
+    <div class="container">
 
-    <div>
-        <h1>Eero
-            <br>by Eero Lehtonen
-        </h1>
+        <div class="header" id="myHeader">
+            <h1>Eero<br>By Eero Lehtonen</h1>
+            <hr>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <h4 class="p2">SISUSTUSARKKITEHTI<br>INREDNINGSARKITEKT<br>INTERIOR ARCHITECT</h4>
+            </div>
+            <div class="col-6">
+                <h4 class="p2" id="p2"><br>YHTEYSTIEDOT</h4>
+            </div>
+        </div> <!-- 100% -->
 
+        <div class="row">
+            <div class="col-12">
+                <hr>
+            </div>
+            <div class="col-3">
+                <p class="p1">Myyntinäyttely</p>
+            </div>
+            <div class="col-3">
+                <p class="p1">v. 1959<br>Helsinki<br></p>
+            </div>
+            <div class="col-6"><img src="img023(1).jpg" alt="xxx"></div><!--Ylin kuva-->
+            <div>
 
+            </div>
+            <div class="col-12">
+                <hr>
+            </div>
+            <div class="col-3">
+                <p class="p1">Myyntinäyttelyn kahvio</p>
+            </div>
+            <div class="col-3">
+                <p class="p1">v. 1959<br>Helsinki<br>Tuolit Imman "Nana"</p>
+            </div>
+            <div class="col-6"><img src="img024(1).jpg" alt="xxx"></div><!--Keskimmäinen kuva-->
+            <div>
+
+            </div>
+            <div class="col-12">
+                <hr>
+            </div>
+            <div class="col-3">
+                <p class="p1">Näkymä 3</p>
+            </div>
+            <div class="col-3">
+                <p class="p1">v. 1959</p>
+            </div>
+            <div class="col-6"><img src="img018(1).jpg" alt="xxx"></div><!--Alin kuva-->
+        </div>
     </div>
-    <h4>SISUSTUSARKKITEHTI
-        <br>INREDNINGSARKITEKT
-        <br>INTERIOR ARCHITECT
-    </h4>
     </div>
-    <div class="flex-container">
-        <div class="content" id="second"><img src="img015(1).jpg" alt="XXXX"></div>
-        <div class="content" id="first"><img src="img023(1).jpg" alt="XXXX"></div>
 </body>
+
 
 </html>
