--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <div class="col-3">
                 <p class="p1">v. 1959<br>Helsinki<br></p>
             </div>
-            <div class="col-6"><img src="img023(1).jpg" alt="xxx"></div><!--Ylin kuva-->
+            <div class="col-1"></div>
+            <div class="col-3"><img src="img023(1).jpg" alt="xxx"></div><!--Ylin kuva-->
             <div>
 
             </div>
@@ -49,7 +50,8 @@
             <div class="col-3">
                 <p class="p1">v. 1959<br>Helsinki<br>Tuolit Imman "Nana"</p>
             </div>
-            <div class="col-6"><img src="img024(1).jpg" alt="xxx"></div><!--Keskimmäinen kuva-->
+            <div class="col-1"></div>
+            <div class="col-3"><img src="img024(1).jpg" alt="xxx"></div><!--Keskimmäinen kuva-->
             <div>
 
             </div>
@@ -62,7 +64,8 @@
             <div class="col-3">
                 <p class="p1">v. 1959</p>
             </div>
-            <div class="col-6"><img src="img018(1).jpg" alt="xxx"></div><!--Alin kuva-->
+            <div class="col-1"></div>
+            <div class="col-3"><img src="img018(1).jpg" alt="xxx"></div><!--Alin kuva-->
         </div>
     </div>
     </div>
