--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
     <link rel="stylesheet" href="styles.css">
-    <title>Eero</title>
+    <title>Galleria By Eero</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                 <h4 class="p2">SISUSTUSARKKITEHTI<br>INREDNINGSARKITEKT<br>INTERIOR ARCHITECT</h4>
             </div>
             <div class="col-6">
-                <h4 class="p2" id="p2"><br>YHTEYSTIEDOT</h4>
+                <h4 class="p2" id="p2">GALLERIA<br><br>YHTEYSTIEDOT</h4>
             </div>
         </div> <!-- 100% -->
 
@@ -69,6 +69,12 @@
         </div>
     </div>
     </div>
+    <footer>
+        <div class="col-12">
+            <hr>
+        </div>
+        <p> &copy; ⎥ Joel Kuosmanen</p>
+    </footer>
 </body>
 
 
