--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <h4 class="p2">SISUSTUSARKKITEHTI<br>INREDNINGSARKITEKT<br>INTERIOR ARCHITECT</h4>
             </div>
             <div class="col-6">
-                <h4 class="p2" id="p2">GALLERIA<br><br>YHTEYSTIEDOT</h4>
+                <h4 class="p2" id="p2"><a href="index.html">GALLERIA</a><br><br>
+                    <a href="yhteystiedot.html">YHTEYSTIEDOT</a>
+                </h4>
             </div>
         </div> <!-- 100% -->
 
@@ -37,7 +39,7 @@
                 <p class="p1">v. 1959<br>Helsinki<br></p>
             </div>
             <div class="col-1"></div>
-            <div class="col-3"><img src="img023(1).jpg" alt="xxx"></div><!--Ylin kuva-->
+            <div class="col-4"><img src="img023(1).jpg" alt="xxx"></div><!--Ylin kuva-->
             <div>
 
             </div>
@@ -51,7 +53,7 @@
                 <p class="p1">v. 1959<br>Helsinki<br>Tuolit Imman "Nana"</p>
             </div>
             <div class="col-1"></div>
-            <div class="col-3"><img src="img024(1).jpg" alt="xxx"></div><!--Keskimmäinen kuva-->
+            <div class="col-4"><img src="img024(1).jpg" alt="xxx"></div><!--Keskimmäinen kuva-->
             <div>
 
             </div>
@@ -65,10 +67,10 @@
                 <p class="p1">v. 1959</p>
             </div>
             <div class="col-1"></div>
-            <div class="col-3"><img src="img018(1).jpg" alt="xxx"></div><!--Alin kuva-->
+            <div class="col-4"><img src="img018(1).jpg" alt="xxx"></div><!--Alin kuva-->
         </div>
     </div>
-    </div>
+
     <footer>
         <div class="col-12">
             <hr>
