--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
     <link rel="stylesheet" href="styles.css">
-    <title>Yhteystiedot</title>
+    <title>Galleria By Eero</title>
 </head>
 
 <body>
@@ -32,18 +32,18 @@
             <div class="col-12">
                 <hr>
             </div>
-
-            <div class="col-5"></div>
-
-            <div class="col-2"></div>
+            <div class="col-1"></div>
             <div class="col-4">
-                <p class="p1">Yhteystiedot</p>
-                <p class="p1">Eero<br>By Eero Lehtonen<br><br>Ullanlinna,
-                    Helsinki<br><br>eero@gmail.com<br><br><br><br></p>
-
+                <p class="p1">About Eero</p>
+                <p class="p1">Eero Lehtonen, mies, joka käytännöllä ja kursseja käymällä hankki sisustusarkkitehdin
+                    taidot. Työura sisälsi vaativia työnjohtotehtäviä puusepän tehtaissa. Myöhemmin monimuotoisia
+                    suunnittelutöitä, jotka koskivat talojen rakentamista, sisustusta ja jonkin verran design
+                    -huonekaluja. Hänen erikoisaloja olivat mm. huonekalut, takat, portaat ja hirsihuvilat.<br><br>Aina
+                    on olemassa ainakin kaksi ratkaisua.</p>
+                <div class="col-7"></div>
             </div>
-
         </div>
+
         <footer>
             <div class="col-12">
                 <hr>
@@ -51,5 +51,3 @@
             <p> &copy; ⎥ Joel Kuosmanen</p>
         </footer>
 </body>
-
-</html>
