--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h4 class="p2">SISUSTUSARKKITEHTI<br>INREDNINGSARKITEKT<br>INTERIOR ARCHITECT</h4>
             </div>
             <div class="col-6">
-                <h4 class="p2" id="p2"><a href="index.html">GALLERIA</a><br><br>
+                <h4 class="p2" id="p2"><a href="index.html">GALLERIA</a><br><a href="about.html">ABOUT</a><br>
                     <a href="yhteystiedot.html">YHTEYSTIEDOT</a>
                 </h4>
             </div>
@@ -68,6 +68,7 @@
             </div>
             <div class="col-1"></div>
             <div class="col-4"><img src="img018(1).jpg" alt="xxx"></div><!--Alin kuva-->
+
         </div>
     </div>
 
