--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h4 class="p2">SISUSTUSARKKITEHTI<br>INREDNINGSARKITEKT<br>INTERIOR ARCHITECT</h4>
             </div>
             <div class="col-6">
-                <h4 class="p2" id="p2"><a href="index.html">GALLERIA</a><br><a href="about.html">ABOUT</a><br>
+                <h4 class="p2" id="p2"><a href="index.html" id="gal">GALLERIA</a><br><a href="about.html">ABOUT</a><br>
                     <a href="yhteystiedot.html">YHTEYSTIEDOT</a>
                 </h4>
             </div>
