--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-6">
                 <h4 class="p2" id="p2"><a href="index.html">GALLERIA</a><br><a href="about.html">ABOUT</a><br>
-                    <a href="yhteystiedot.html">YHTEYSTIEDOT</a>
+                    <a href="yhteystiedot.html" id="gal">YHTEYSTIEDOT</a>
                 </h4>
             </div>
         </div> <!-- 100% -->
