--- a/about.html
+++ b/about.html
@@ -43,11 +43,14 @@
                 <div class="col-7"></div>
             </div>
         </div>
+    </div>
 
-        <footer>
-            <div class="col-12">
-                <hr>
-            </div>
-            <p> &copy; ⎥ Joel Kuosmanen</p>
-        </footer>
+    <footer>
+        <div class="col-12">
+            <hr>
+        </div>
+        <p> &copy; ⎥ Joel Kuosmanen</p>
+    </footer>
 </body>
+
+</html>
