--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p class="p1">v. 1959<br>Helsinki<br></p>
             </div>
             <div class="col-1"></div>
-            <div class="col-4"><img src="img023(1).jpg" alt="xxx"></div><!--Ylin kuva-->
+            <div class="col-4"><img src="img023(1).jpeg" alt="xxx"></div><!--Ylin kuva-->
             <div>
 
             </div>
@@ -53,7 +53,7 @@
                 <p class="p1">v. 1959<br>Helsinki<br>Tuolit Imman "Nana"</p>
             </div>
             <div class="col-1"></div>
-            <div class="col-4"><img src="img024(1).jpg" alt="xxx"></div><!--Keskimmäinen kuva-->
+            <div class="col-4"><img src="img024(1).jpeg" alt="xxx"></div><!--Keskimmäinen kuva-->
             <div>
 
             </div>
@@ -67,7 +67,7 @@
                 <p class="p1">v. 1959</p>
             </div>
             <div class="col-1"></div>
-            <div class="col-4"><img src="img018(1).jpg" alt="xxx"></div><!--Alin kuva-->
+            <div class="col-4"><img src="img018(1).jpeg" alt="xxx"></div><!--Alin kuva-->
 
         </div>
     </div>
