--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <h4 class="p2">SISUSTUSARKKITEHTI<br>INREDNINGSARKITEKT<br>INTERIOR ARCHITECT</h4>
             </div>
             <div class="col-6">
-                <h4 class="p2" id="p2"><a href="index.html" id="gal">GALLERIA</a><br><a href="about.html">ABOUT</a><br>
+                <h4 class="p2" id="p2">
+                    <a href="index.html" id="gal">GALLERIA</a><br>
+                    <a href="about.html">ABOUT</a><br>
                     <a href="yhteystiedot.html">YHTEYSTIEDOT</a>
                 </h4>
             </div>
@@ -39,7 +41,8 @@
                 <p class="p1">v. 1959<br>Helsinki<br></p>
             </div>
             <div class="col-1"></div>
-            <div class="col-4"><img src="img023(1).jpeg" alt="xxx"></div><!--Ylin kuva-->
+            <div class="col-4"><img src="img023(1).jpeg" alt="Kuva myyntinäyttelyn eteisestä mustavalkoisena."></div>
+            <!--Ylin kuva-->
             <div>
 
             </div>
@@ -53,7 +56,8 @@
                 <p class="p1">v. 1959<br>Helsinki<br>Tuolit Imman "Nana"</p>
             </div>
             <div class="col-1"></div>
-            <div class="col-4"><img src="img024(1).jpeg" alt="xxx"></div><!--Keskimmäinen kuva-->
+            <div class="col-4"><img src="img024(1).jpeg" alt="Kuva myyntinäyttelyn kahviosta mustavalkoisena."></div>
+            <!--Keskimmäinen kuva-->
             <div>
 
             </div>
@@ -67,7 +71,8 @@
                 <p class="p1">v. 1959</p>
             </div>
             <div class="col-1"></div>
-            <div class="col-4"><img src="img018(1).jpeg" alt="xxx"></div><!--Alin kuva-->
+            <div class="col-4"><img src="img018(1).jpeg" alt="Kuva huonekalujen asetelmasta mustavalkoisena."></div>
+            <!--Alin kuva-->
 
         </div>
     </div>
