--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="col-12">
             <hr>
         </div>
-        <p> &copy; ⎥ Joel Kuosmanen</p>
+        <p> &copy; Joel Kuosmanen</p>
     </footer>
 </body>
 
