--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <div class="col-12">
             <hr>
         </div>
-        <p> &copy; ⎥ Joel Kuosmanen</p>
+        <p> &copy; Joel Kuosmanen</p>
     </footer>
 </body>
 
